# hri-safe-remote-control-system

./: LICENSE  README.md  Running_Tutorials.md
drivers/C/include/: SerialInterface.h  VehicleInterface.h  VehicleMessages.h
drivers/C/src/: SerialInterface.c  VehicleInterface.c
drivers/C/tutorials/: vsc_tutorial_1.c  vsc_tutorial_2.c  vsc_tutorial_3.c  vsc_tutorial_4.c
hri_c_driver/: CMakeLists.txt  Makefile  README.md  package.xml
hri_c_driver/include/hri_c_driver/: VehicleInterface.h  VehicleMessages.h
hri_c_driver/src/: SerialInterface.c  VehicleInterface.c
hri_c_driver/tutorials/: vsc_tutorial_1.c  vsc_tutorial_2.c  vsc_tutorial_3.c  vsc_tutorial_4.c
hri_safety_sense/: CMakeLists.txt  README.md  config.yaml  package.xml
hri_safety_sense/cfg/: 99-hrivsc.rules  hri_vsc_udev.rules  params.yaml
hri_safety_sense/include/: SerialInterface.h  VehicleInterface.h
hri_safety_sense/include/hri_safety_sense/: MsgHandler.hpp  VscProcess.hpp
hri_safety_sense/launch/: hri_joystick_node_launch.py  safe_remote_control.launch
hri_safety_sense/src/: JoystickHandler.cpp  JoystickHandler.h  JoystickHandler.hpp  MsgHandler.h  SerialInterface.c  VehicleInterface.c  VscProcess.cpp  VscProcess.h  VscProcess.hpp  main.cpp
hri_safety_sense_msgs/: CMakeLists.txt  package.xml
hri_safety_sense_msgs/srv/: EmergencyStop.srv
hri_safety_sense_srvs/: CMakeLists.txt  package.xml
