<?xml version="1.0"?>
<package format="3">
  <name>hri_safety_sense</name>
  <version>1.0.0</version>
  <description>

      hri_safe_remote_system

  </description>

  <maintainer email="contact@fortrobotics.com">hri</maintainer>
  <license>BSD</license>
  <author>hri</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--buildtool_depend>rosidl_default_generators</buildtool_depend-->
  <!--exec_depend>rosidl_default_runtime</exec_depend-->

  <depend>hri_safety_sense_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- member_of_group>rosidl_interface_packages</member_of_group -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>

  </export>
</package>
