<?xml version="1.0"?>
<package format="2">
  <name>hri_safety_sense</name>
  <version>1.0.0</version>
  <description>

      hri_safe_remote_system

  </description>

  <maintainer email="contact@fortrobotics.com">hri</maintainer>
  <license>BSD</license>
  <author>hri</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>hri_c_driver</depend>
  <depend>hri_safety_sense_srvs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>

  </export>
</package>
