<?xml version="1.0"?>
<package format="2">
  <name>hri_safety_sense_srvs</name>
  <version>1.0.0</version>
  <description>The hri_safety_sense_srvs package</description>

  <maintainer email="contact@fortrobotics.com">hri</maintainer>
  <license>BSD</license>
  <author>hri</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
